--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,27 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
 
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <title>Fitness</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -19,10 +33,11 @@
       crossorigin="anonymous"
     />
 
-    <title>Fitness</title>
-    <link rel="icon"
-        href="https://png.pngtree.com/png-clipart/20190630/original/pngtree-vector-body-building-icon-png-image_4155900.jpg"
-        type="image/x-icon" />
+    <link
+      rel="icon"
+      href="https://png.pngtree.com/png-clipart/20190630/original/pngtree-vector-body-building-icon-png-image_4155900.jpg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
